feat: support logs generated from -XX:+PrintGC or -Xlog:gc (#217)